[project]
name = "mingk42_args_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = []
requires-python = ">3.9.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath=[
	"src"
]

[tool.pdm.scripts]
test="pytest"
ctest="pytest --cov"
stest="pytest -s"
giti2="pip install git+https://github.com/Mingk42/mah_20240725.git@v0.2.0/argparse"
giti="pip install git+https://github.com/Mingk42/mah_20240725.git"

[project.scripts]
my-history="mingk42_args_history.cli:cmd"

[project.urls]
GIT="https://github.com/Mingk42/mah_20240725"
ISSUE="https://github.com/Mingk42/mah_20240725/issue"
